app3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3
spec:
  ingressClassName: nginx
  rules:
  - host: "test-ingress.cluster-dev.puzl.ee"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app3
            port:
              number: 80
